[gd_scene load_steps=9 format=3 uid="uid://o0d7k03yspt4"]

[ext_resource type="Texture2D" uid="uid://2n5mfldwcme8" path="res://graphics/player/player.png" id="1_6a66r"]
[ext_resource type="Script" path="res://Scene/player/player.gd" id="1_e0lo5"]
[ext_resource type="Texture2D" uid="uid://cfcdcsahx0xar" path="res://decals/white.png" id="3_654ir"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e82s3"]
radius = 66.0076

[sub_resource type="Gradient" id="Gradient_03bjj"]
colors = PackedColorArray(0.32549, 0.709804, 0.709804, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rvkdv"]
gradient = SubResource("Gradient_03bjj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_87j34"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.0784314, 1, 1, 0.415686)
color_ramp = SubResource("GradientTexture1D_rvkdv")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qigna"]
polygon = PackedVector2Array(61, 48, 45, 48, 35, 51, 24, 54, 18, 59, 6, 64, -4, 67, -19, 68, -29, 63, -34, 57, -35, 52, -39, 46, -41, 41, -44, 39, -49, 34, -50, 29, -50, 26, -54, 19, -58, 8, -59, -5, -57, -18, -50, -26, -44, -35, -35, -39, -24, -42, -20, -48, -12, -51, -6, -49, 4, -54, 13, -52, 24, -54, 31, -49, 37, -42, 44, -38, 48, -28, 53, -22, 63, -20, 71, -11, 80, -4, 89, -4, 95, -2, 100, 2, 110, 3, 113, 5, 114, 8, 125, 9, 127, 10, 126, 13, 130, 13, 133, 16, 135, 23, 135, 31, 135, 36, 132, 39, 127, 39, 123, 38, 125, 44, 119, 43, 110, 43, 104, 49, 98, 51, 98, 59, 92, 61, 73, 60, 63, 59, 60, 54)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_e0lo5")
metadata/_edit_horizontal_guides_ = [-244.0]

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(39, 7)
rotation = 1.5708
texture = ExtResource("1_6a66r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_e82s3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStart" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStart"]
position = Vector2(148, 26)

[node name="Marker2D2" type="Marker2D" parent="LaserStart"]
position = Vector2(146, 38)

[node name="Marker2D3" type="Marker2D" parent="LaserStart"]
position = Vector2(146, 14)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(132, 27)
emitting = false
process_material = SubResource("ParticleProcessMaterial_87j34")
texture = ExtResource("3_654ir")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_qigna")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
